forms-flow-bpm/infra/test/deployment_test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: form-flow-bpm
  namespace : forms-flow-bpm
  labels:
    app.kubernetes.io/name: camunda
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: camunda
  template:
    metadata:
      labels:
        app.kubernetes.io/name: camunda
    spec:
      imagePullSecrets:
        - name: private-registry
      containers:
        - name: form-flow-bpm
          image: sofiamunicipalitydigitall/forms-flow-bpm:releasetest
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "echo '192.168.201.46  smkeycloak-test forms-flow-web-test form-flow-forms-test form-flow-analytics-test form-flow-api-test form-flow-bpm-test form-flow-documents-test' >> /etc/hosts"]
          ports:
            - containerPort: 8000
              name: http-camunda
              protocol: TCP
          env:
            - name: KEYCLOAK_URL_REALM
              value: "Sofia"
            - name: KEYCLOAK_URL
              value: "http://smkeycloak-test:8080"
            - name: KEYCLOAK_CLIENTID
              value: "forms-flow-bpm"
            - name: KEYCLOAK_CLIENTSECRET
              value: "e4bdbd25-1467-4f7f-b993-bc4b1944c943"
            - name: CAMUNDA_JDBC_URL
              value: "jdbc:postgresql://192.168.201.46:5432/camundadbtest"
            - name: CAMUNDA_JDBC_USER
              value: "camundatest"
            - name: CAMUNDA_JDBC_PASSWORD
              value: "jw8s0F4"
            - name: CAMUNDA_JDBC_DRIVER
              value: "org.postgresql.Driver"
            - name: CAMUNDA_APP_ROOT_LOG_FLAG
              value: "error"
            - name: FORMSFLOW_API_URL
              value: "http://form-flow-api-test:8080"
            - name: FORMIO_URL
              value: "http://form-flow-forms-test:8080"
            - name: APP_SECURITY_ORIGIN
              value: "*"
            - name: WEBSOCKET_SECURITY_ORIGIN
              value: "http://forms-flow-web-dev:8080"
            - name: WEBSOCKET_MESSAGE_TYPE
              value: "TASK_EVENT"
            - name: WEBSOCKET_ENCRYPT_KEY
              value: "giert989jkwrgb@DR55"
            - name: DATA_BUFFER_SIZE
              value: "2"
            - name: IDENTITY_PROVIDER_MAX_RESULT_SIZE
              value: "250"
            - name: KEYCLOAK_WEB_CLIENTID
              value: "forms-flow-web"
            - name: KEYCLOAK_ENABLE_CLIENT_AUTH
              value: "false"
            - name: BPM_CLIENT_CONN_TIMEOUT
              value: "5000"
            - name: DATA_ANALYSIS_URL
              value: "http://localhost:6000/analysis"
            - name: CUSTOM_SUBMISSION_URL
              value: "http://{your-ip-address}:{port}"
            - name: CUSTOM_SUBMISSION_ENABLED
              value: "false"
            - name: MULTI_TENANCY_ENABLED
              value: "false"
            - name: FORMSFLOW_ADMIN_URL
              value: "http://localhost:8000"
            - name: REDIS_ENABLED
              value: "false"
            - name: REDIS_HOST
              value: "{redis-hostname}"
            - name: REDIS_PORT
              value: "6379"
            - name: REDIS_PASSCODE
              value: "changeme"
            - name: SESSION_COOKIE_SECURE
              value: "false"
            - name: WEB_URL
              value: "http://digital.digitalsofia.digital"
            - name: FORMS_FLOW_INTEGRATIONS_URL
              value: "http://forms-flow-eforms-integrations-svc.form-flow-eforms-integrations.svc.cluster.local:8002/integrations"
            - name: NOTIFICATION_PREFIX
              value: "/notifications"
